// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UU5.Bricks.Table.Td checkGrammar=false 1`] = `
<td
  className="uu5-bricks-table-td uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Td checkGrammar=true 1`] = `
<td
  className="uu5-bricks-table-td uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Td checkHighlight=false 1`] = `
<td
  className="uu5-bricks-table-td uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Td checkHighlight=true 1`] = `
<td
  className="uu5-bricks-table-td uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Td checkSpaces=false 1`] = `
<td
  className="uu5-bricks-table-td uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Td checkSpaces=true 1`] = `
<td
  className="uu5-bricks-table-td uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Td className="my-classname" 1`] = `
<td
  className="uu5-bricks-table-td uu5-common-text my-classname"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Td className="test-classname" 1`] = `
<td
  className="uu5-bricks-table-td uu5-common-text test-classname"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Td colSpan="3" 1`] = `
<td
  className="uu5-bricks-table-td uu5-common-text"
  colSpan="3"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Td colSpan=3 1`] = `
<td
  className="uu5-bricks-table-td uu5-common-text"
  colSpan={3}
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Td colorSchema="brown" 1`] = `
<td
  className="color-schema-brown uu5-bricks-table-td uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Td colorSchema="brown-rich" 1`] = `
<td
  className="color-schema-brown-rich uu5-bricks-table-td uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Td colorSchema="cyan" 1`] = `
<td
  className="color-schema-cyan uu5-bricks-table-td uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Td colorSchema="cyan-rich" 1`] = `
<td
  className="color-schema-cyan-rich uu5-bricks-table-td uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Td colorSchema="default" 1`] = `
<td
  className="color-schema-default uu5-bricks-table-td uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Td colorSchema="green" 1`] = `
<td
  className="color-schema-green uu5-bricks-table-td uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Td colorSchema="green-rich" 1`] = `
<td
  className="color-schema-green-rich uu5-bricks-table-td uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Td colorSchema="grey" 1`] = `
<td
  className="color-schema-grey uu5-bricks-table-td uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Td colorSchema="grey-rich" 1`] = `
<td
  className="color-schema-grey-rich uu5-bricks-table-td uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Td colorSchema="orange" 1`] = `
<td
  className="color-schema-orange uu5-bricks-table-td uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Td colorSchema="orange-rich" 1`] = `
<td
  className="color-schema-orange-rich uu5-bricks-table-td uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Td colorSchema="pink" 1`] = `
<td
  className="color-schema-pink uu5-bricks-table-td uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Td colorSchema="pink-rich" 1`] = `
<td
  className="color-schema-pink-rich uu5-bricks-table-td uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Td colorSchema="purple" 1`] = `
<td
  className="color-schema-purple uu5-bricks-table-td uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Td colorSchema="purple-rich" 1`] = `
<td
  className="color-schema-purple-rich uu5-bricks-table-td uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Td colorSchema="red" 1`] = `
<td
  className="color-schema-red uu5-bricks-table-td uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Td colorSchema="red-rich" 1`] = `
<td
  className="color-schema-red-rich uu5-bricks-table-td uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Td colorSchema="yellow" 1`] = `
<td
  className="color-schema-yellow uu5-bricks-table-td uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Td colorSchema="yellow-rich" 1`] = `
<td
  className="color-schema-yellow-rich uu5-bricks-table-td uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Td content="This is Content from ContentMixin" 1`] = `
<td
  className="uu5-bricks-table-td uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="This is Content from ContentMixin"
  />
</td>
`;

exports[`UU5.Bricks.Table.Td content=12345 1`] = `
<td
  className="uu5-bricks-table-td uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
>
  12345
</td>
`;

exports[`UU5.Bricks.Table.Td controlled=false 1`] = `
<td
  className="uu5-bricks-table-td uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Td controlled=true 1`] = `
<td
  className="uu5-bricks-table-td uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Td default props 1`] = `
<td
  className="uu5-bricks-table-td uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Td disabled=false 1`] = `
<td
  className="uu5-bricks-table-td uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Td disabled=false 3`] = `
<td
  className="uu5-bricks-table-td uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Td disabled=true 1`] = `
<td
  className="uu5-bricks-table-td uu5-common-text uu5-common-disabled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <span
    className="uu5-common-disabled-cover"
    key="disabledCover"
  />
</td>
`;

exports[`UU5.Bricks.Table.Td disabled=true 3`] = `
<td
  className="uu5-bricks-table-td uu5-common-text uu5-common-disabled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <span
    className="uu5-common-disabled-cover"
    key="disabledCover"
  />
</td>
`;

exports[`UU5.Bricks.Table.Td dynamic=false 1`] = `
<td
  className="uu5-bricks-table-td uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Td dynamic=true 1`] = `
<td
  className="uu5-bricks-table-td uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Td elementAttrs={"data":{"test":"data-test-value"}} 1`] = `
<td
  className="uu5-bricks-table-td uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Td fullTextSearchPriority=0 1`] = `
<td
  className="uu5-bricks-table-td uu5-common-text uu-fulltextsearch-0"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Td hidden=false 1`] = `
<td
  className="uu5-bricks-table-td uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Td hidden=false 3`] = `
<td
  className="uu5-bricks-table-td uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Td hidden=true 1`] = `
<td
  className="uu5-bricks-table-td uu5-common-text uu5-common-hidden"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Td hidden=true 3`] = `
<td
  className="uu5-bricks-table-td uu5-common-text uu5-common-hidden"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Td id="myId" 1`] = `
<td
  className="uu5-bricks-table-td uu5-common-text"
  id="myId"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Td id="test-id" 1`] = `
<td
  className="uu5-bricks-table-td uu5-common-text"
  id="test-id"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Td ignoreHTML=false 1`] = `
<td
  className="uu5-bricks-table-td uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Td ignoreHTML=true 1`] = `
<td
  className="uu5-bricks-table-td uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Td mainAttrs=undefined 1`] = `
<td
  className="uu5-bricks-table-td uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Td name="myName" 1`] = `
<td
  className="uu5-bricks-table-td uu5-common-text"
  id="uuID"
  name="myName"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Td nestingLevel="bigBox" 1`] = `
<td
  className="uu5-bricks-table-td uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Td nestingLevel="bigBoxCollection" 1`] = `
<td
  className="uu5-bricks-table-td uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Td nestingLevel="box" 1`] = `
<td
  className="uu5-bricks-table-td uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Td nestingLevel="box" 3`] = `
<td
  className="uu5-bricks-table-td uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Td nestingLevel="boxCollection" 1`] = `
<td
  className="uu5-bricks-table-td uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Td nestingLevel="container" 1`] = `
<td
  className="uu5-bricks-table-td uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Td nestingLevel="inline" 1`] = `
<td
  className="uu5-bricks-table-td uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Td nestingLevel="inline" 3`] = `
<td
  className="uu5-bricks-table-td uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Td nestingLevel="page" 1`] = `
<td
  className="uu5-bricks-table-td uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Td nestingLevel="smallBox" 1`] = `
<td
  className="uu5-bricks-table-td uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Td nestingLevel="smallBoxCollection" 1`] = `
<td
  className="uu5-bricks-table-td uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Td nestingLevel="spa" 1`] = `
<td
  className="uu5-bricks-table-td uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Td noIndex=false 1`] = `
<td
  className="uu5-bricks-table-td uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Td noIndex=true 1`] = `
<td
  className="uu5-bricks-table-td uu5-common-text uu5-noindex uu-fulltextsearch-0"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Td noPrint=false 1`] = `
<td
  className="uu5-bricks-table-td uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Td noPrint=true 1`] = `
<td
  className="uu5-bricks-table-td uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Td pureRender=false 1`] = `
<td
  className="uu5-bricks-table-td uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Td pureRender=true 1`] = `
<td
  className="uu5-bricks-table-td uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Td rowSpan="3" 1`] = `
<td
  className="uu5-bricks-table-td uu5-common-text"
  id="uuID"
  rowSpan="3"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Td rowSpan=3 1`] = `
<td
  className="uu5-bricks-table-td uu5-common-text"
  id="uuID"
  rowSpan={3}
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Td selected=false 1`] = `
<td
  className="uu5-bricks-table-td uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Td selected=true 1`] = `
<td
  className="uu5-bricks-table-td uu5-common-text uu5-common-selected"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Td style="padding:8px; borderRadius: 2px" 1`] = `
<td
  className="uu5-bricks-table-td uu5-common-text"
  id="uuID"
  style={
    Object {
      "borderRadius": "2px",
      "padding": "8px",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Td style={"backgroundColor":"red","color":"blue"} 1`] = `
<td
  className="uu5-bricks-table-td uu5-common-text"
  id="uuID"
  style={
    Object {
      "backgroundColor": "red",
      "color": "blue",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Td style={"margin":8} 1`] = `
<td
  className="uu5-bricks-table-td uu5-common-text"
  id="uuID"
  style={
    Object {
      "margin": 8,
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Td textCorrector=false 1`] = `
<td
  className="uu5-bricks-table-td uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Td textCorrector=true 1`] = `
<td
  className="uu5-bricks-table-td uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Td tooltip="My Tooltip" 1`] = `
<td
  className="uu5-bricks-table-td uu5-common-text"
  id="uuID"
  style={Object {}}
  title="My Tooltip"
/>
`;
